--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<html>
+<head>
+<title>hellow world</title>
+</head>
+<body>
+hellow,world!
+</body>
+</html>
+
